apps/web/src/routes/_home/-components/upcoming-films-widget/upcoming-films-widget.module.css
.row {
  display: flex;
  gap: 20px;
  overflow-x: auto;
  height: 100%;
}

.film {
  width: 300px;
  flex-shrink: 0;
}

.video {
  position: relative;
  width: 100%;
  aspect-ratio: 16 / 9;
  border-radius: var(--rounded-default);
  overflow: hidden;
}

.video::after {
  content: '';
  width: 100%;
  height: 100%;
  background-color: rgb(0 0 0 / 0.5);
  position: absolute;
  top: 0;
  left: 0;
}

.video_preview {
  transform: scale(1.1);
}

.play_icon {
  color: var(--color-white);
  fill: var(--color-white);
  position: absolute;
  top: 50%;
  left: 50%;
  z-index: 3;
  transform: translate(-50%, -50%);
}

.text {
  text-align: left;
  margin-top: 5px;
}

.title {
  font-size: var(--text-lg);
  font-weight: bold;
}

.date {
  font-size: var(--text-sm);
}

.modal {
  background-color: rgb(0 0 0 / 0.8);
}

.modal_content {
  width: 90%;
  height: 90%;
  border-radius: var(--rounded-default);
  overflow: hidden;
}

.iframe {
  border: 0;
  width: 100%;
  height: 100%;
}

